Migration to .NET Core and distingue UI lib

--- a/Project/UnitTestProject/UnitTest.Crypto.csproj
+++ b/Project/UnitTestProject/UnitTest.Crypto.csproj
@@ -101,7 +101,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -123,13 +123,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Droid.Crypto.csproj">
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Droid.Crypto.UI\Droid.Crypto.UI.csproj">
+      <Project>{efede834-2851-4904-922a-9be3bc37a69c}</Project>
+      <Name>Droid.Crypto.UI</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Droid.Crypto\Droid.Crypto.csproj">
       <Project>{9ef2fe1d-fbb8-4446-b35f-a1de87dd9417}</Project>
       <Name>Droid.Crypto</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
